--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 VER=vi
-REGION=vn
 ENV=dev
 ANALYTICS_ID=UA-114361661-6
+API_ENOW=https://api.enow.vn
+CDN_URL=https://cdn.enow.vn
+SERVER_KEY=123456789ABCXyzsdfdsf5345345dsfDSFSDF
